--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <div class="title">高中，加油鸭～</div>
     <div class="title">本次数据更新到2022/09/01</div>
 
-    <div id="total-score" class="chart-box" style="height: 400px;">ttt</div>
-    <div id="class-sort" class="chart-box" style="height: 400px;">ttt</div>
-    <div id="all-class-sort" class="chart-box" style="height: 400px;">ttt</div>
-    <div id="chinese" class="chart-box" style="height: 400px;">ttt</div>
-    <div id="math" class="chart-box" style="height: 400px;">ttt</div>
-    <div id="english" class="chart-box" style="height: 400px;">ttt</div>
-    <div id="physical" class="chart-box" style="height: 400px;">ttt</div>
-    <div id="biology" class="chart-box" style="height: 400px;">ttt</div>
-    <div id="geography" class="chart-box" style="height: 400px;">ttt</div>
+    <div id="total-score" class="chart-box" style="height: 400px;">loading...</div>
+    <div id="class-sort" class="chart-box" style="height: 400px;"></div>
+    <div id="all-class-sort" class="chart-box" style="height: 400px;"></div>
+    <div id="chinese" class="chart-box" style="height: 400px;"></div>
+    <div id="math" class="chart-box" style="height: 400px;"></div>
+    <div id="english" class="chart-box" style="height: 400px;"></div>
+    <div id="physical" class="chart-box" style="height: 400px;"></div>
+    <div id="biology" class="chart-box" style="height: 400px;"></div>
+    <div id="geography" class="chart-box" style="height: 400px;"></div>
   </div>
   <script src="./js/echarts.min.js"></script>
   <script src="./js/index.js"></script>
