--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="title">高中，加油鸭～</div>
+    <div class="title">认真理解往届高考题，触类旁通。 相信自己，加油！！！</div>
     <div class="title">本次数据更新到2022/09/01</div>
 
     <div id="total-score" class="chart-box" style="height: 400px; margin-top: 20px;">loading</div>
