--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="title">认真理解往届高考题，触类旁通。<br /> 相信自己，加油！！！</div>
-    <div class="title">本次数据更新到2022/11/16（记录均为原始分数）</div>
+    <div class="title"></div>
 
     <div id="total-score" class="chart-box" style="height: 400px; margin-top: 20px;">loading</div>
     <div id="class-sort" class="chart-box" style="height: 400px; margin-top: 20px;"></div>
